--- a/notebooks/01_Data_Collection_and_Preprocessing.ipynb
+++ b/notebooks/01_Data_Collection_and_Preprocessing.ipynb
@@ -87,7 +87,7 @@
     "# Load & check bike data\n",
     "import os\n",
     "import pandas as pd\n",
-    "from IPython.display import display\n",
+    "from IPython.display import displayfghyuiop\n",
     "\n",
     "import os\n",
     "print(\"Working dir:\", os.getcwd())\n",
