--- a/notebooks/02_Sentiment_Analysis.ipynb
+++ b/notebooks/02_Sentiment_Analysis.ipynb
@@ -2,21 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "4af209f1-5c47-4bc3-94d7-6afa55ff827e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle\n",
+    "\n",
+    "# # 1) Load the cleaned DataFrame\n",
+    "# with open('../data/df_bike_clean.pkl', 'rb') as f:\n",
+    "#     df_bike = pickle.load(f)\n",
+    "# print(\"Loaded cleaned reviews:\", df_bike.shape)\n",
+    "\n",
+    "# # 2) Load your TF–IDF features and labels\n",
+    "# with open('../data/X_reviews.pkl', 'rb') as f:\n",
+    "#     X_reviews = pickle.load(f)\n",
+    "# with open('../data/y_reviews.pkl', 'rb') as f:\n",
+    "#     y_reviews = pickle.load(f)\n",
+    "\n",
+    "# print(\"X_reviews:\", X_reviews.shape)\n",
+    "# print(\"y_reviews value counts:\\n\", y_reviews.value_counts())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8a36c316-b8cd-4e55-bd57-974591f3e051",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded cleaned reviews: (50000, 4)\n",
-      "X_reviews: (50000, 115)\n",
+      "Loaded deduplicated data: (300, 3)\n",
+      "X_reviews (deduped): (300, 115)\n",
       "y_reviews value counts:\n",
       " sentiment\n",
-      "negative    16840\n",
-      "positive    16777\n",
-      "neutral     16383\n",
+      "positive    100\n",
+      "neutral     100\n",
+      "negative    100\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -24,25 +49,25 @@
    "source": [
     "import pickle\n",
     "\n",
-    "# 1) Load the cleaned DataFrame\n",
-    "with open('../data/df_bike_clean.pkl', 'rb') as f:\n",
-    "    df_bike = pickle.load(f)\n",
-    "print(\"Loaded cleaned reviews:\", df_bike.shape)\n",
     "\n",
-    "# 2) Load your TF–IDF features and labels\n",
-    "with open('../data/X_reviews.pkl', 'rb') as f:\n",
-    "    X_reviews = pickle.load(f)\n",
-    "with open('../data/y_reviews.pkl', 'rb') as f:\n",
-    "    y_reviews = pickle.load(f)\n",
+    "# — *****Load the deduplicated set instead***** —\n",
+    "with open('../data/df_unique.pkl',    'rb') as f:\n",
+    "    df_bike = pickle.load(f)           # now holds deduped DataFrame\n",
+    "with open('../data/X_unique.pkl',     'rb') as f:\n",
+    "    X_reviews = pickle.load(f)         # TF–IDF of deduped text\n",
+    "with open('../data/y_unique.pkl',     'rb') as f:\n",
+    "    y_reviews = pickle.load(f)         # labels for deduped text\n",
+    "with open('../data/vectorizer_dup.pkl','rb') as f:\n",
+    "    vectorizer = pickle.load(f)        # optional, if you need feature names\n",
     "\n",
-    "print(\"X_reviews:\", X_reviews.shape)\n",
-    "print(\"y_reviews value counts:\\n\", y_reviews.value_counts())\n",
-    "\n"
+    "print(\"Loaded deduplicated data:\", df_bike.shape)\n",
+    "print(\"X_reviews (deduped):\", X_reviews.shape)\n",
+    "print(\"y_reviews value counts:\\n\", y_reviews.value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "5b2f7599-7261-473e-b93e-3fd1365a35cb",
    "metadata": {},
    "outputs": [
@@ -50,8 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set: (40000, 115) (40000,)\n",
-      "Test  set: (10000, 115) (10000,)\n"
+      "Train set: (240, 115) (240,)\n",
+      "Test  set: (60, 115) (60,)\n"
      ]
     }
    ],
@@ -72,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "91897954-0ab1-4a5b-8959-73eed6fe8b20",
    "metadata": {},
    "outputs": [
@@ -83,34 +108,34 @@
       "=== Logistic Regression ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative       1.00      1.00      1.00      3368\n",
-      "     neutral       1.00      1.00      1.00      3277\n",
-      "    positive       1.00      1.00      1.00      3355\n",
+      "    negative       1.00      1.00      1.00        20\n",
+      "     neutral       1.00      1.00      1.00        20\n",
+      "    positive       1.00      1.00      1.00        20\n",
       "\n",
-      "    accuracy                           1.00     10000\n",
-      "   macro avg       1.00      1.00      1.00     10000\n",
-      "weighted avg       1.00      1.00      1.00     10000\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[3368    0    0]\n",
-      " [   0 3277    0]\n",
-      " [   0    0 3355]]\n",
+      " [[20  0  0]\n",
+      " [ 0 20  0]\n",
+      " [ 0  0 20]]\n",
       "\n",
       "=== Multinomial Naïve Bayes ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative       1.00      1.00      1.00      3368\n",
-      "     neutral       1.00      1.00      1.00      3277\n",
-      "    positive       1.00      1.00      1.00      3355\n",
+      "    negative       1.00      1.00      1.00        20\n",
+      "     neutral       1.00      1.00      1.00        20\n",
+      "    positive       1.00      1.00      1.00        20\n",
       "\n",
-      "    accuracy                           1.00     10000\n",
-      "   macro avg       1.00      1.00      1.00     10000\n",
-      "weighted avg       1.00      1.00      1.00     10000\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[3368    0    0]\n",
-      " [   0 3277    0]\n",
-      " [   0    0 3355]]\n"
+      " [[20  0  0]\n",
+      " [ 0 20  0]\n",
+      " [ 0  0 20]]\n"
      ]
     }
    ],
@@ -141,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "fe0d20d0-7307-4ed2-b760-889754491cd2",
    "metadata": {},
    "outputs": [
@@ -149,19 +174,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sequence train shape: (40000, 100) Label train shape: (40000,)\n",
+      "Sequence train shape: (240, 100) Label train shape: (240,)\n",
       "Epoch 1/5\n",
-      "\u001b[1m1125/1125\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 38ms/step - accuracy: 0.9527 - loss: 0.1592 - val_accuracy: 1.0000 - val_loss: 3.7594e-05\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 72ms/step - accuracy: 0.4980 - loss: 1.0927 - val_accuracy: 0.5833 - val_loss: 1.0793\n",
       "Epoch 2/5\n",
-      "\u001b[1m1125/1125\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 39ms/step - accuracy: 1.0000 - loss: 2.0445e-04 - val_accuracy: 1.0000 - val_loss: 4.5783e-05\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 0.5402 - loss: 1.0616 - val_accuracy: 0.6250 - val_loss: 1.0481\n",
       "Epoch 3/5\n",
-      "\u001b[1m1125/1125\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 40ms/step - accuracy: 1.0000 - loss: 5.1919e-05 - val_accuracy: 1.0000 - val_loss: 9.3853e-06\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step - accuracy: 0.7268 - loss: 1.0196 - val_accuracy: 0.7083 - val_loss: 0.9843\n",
       "Epoch 4/5\n",
-      "\u001b[1m1125/1125\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 40ms/step - accuracy: 1.0000 - loss: 1.3751e-05 - val_accuracy: 1.0000 - val_loss: 4.0151e-06\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step - accuracy: 0.8864 - loss: 0.9357 - val_accuracy: 0.7917 - val_loss: 0.8716\n",
       "Epoch 5/5\n",
-      "\u001b[1m1125/1125\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 39ms/step - accuracy: 1.0000 - loss: 6.1420e-06 - val_accuracy: 1.0000 - val_loss: 2.0234e-06\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - accuracy: 1.0000 - loss: 2.0010e-06\n",
-      "LSTM Test Loss: 0.000, Test Acc: 1.000\n"
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 0.9220 - loss: 0.8026 - val_accuracy: 0.7917 - val_loss: 0.6776\n",
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - accuracy: 0.8694 - loss: 0.6558\n",
+      "LSTM Test Loss: 0.660, Test Acc: 0.867\n"
      ]
     }
    ],
@@ -175,17 +200,17 @@
     "from tensorflow.keras.models     import Sequential\n",
     "from tensorflow.keras.layers     import Embedding, LSTM, Dense\n",
     "\n",
-    "# 1) Encode string labels to ints\n",
+    "# Encode string labels to ints\n",
     "le = LabelEncoder()\n",
-    "y_enc = le.fit_transform(y_reviews)            # y_reviews from Cell 1\n",
+    "y_enc = le.fit_transform(y_reviews)            \n",
     "\n",
-    "# 2) Tokenize & pad your cleaned text\n",
+    "# Tokenize & pad your cleaned text\n",
     "tokenizer = Tokenizer(num_words=5000, oov_token=\"<OOV>\")\n",
     "tokenizer.fit_on_texts(df_bike['cleaned_review'])\n",
     "seqs   = tokenizer.texts_to_sequences(df_bike['cleaned_review'])\n",
     "padded = pad_sequences(seqs, maxlen=100)\n",
     "\n",
-    "# 3) Split **padded** sequences and **y_enc** together\n",
+    "# Split **padded** sequences and **y_enc** together\n",
     "X_seq_train, X_seq_test, y_seq_train, y_seq_test = train_test_split(\n",
     "    padded, \n",
     "    y_enc, \n",
@@ -196,7 +221,7 @@
     "\n",
     "print(\"Sequence train shape:\", X_seq_train.shape, \"Label train shape:\", y_seq_train.shape)\n",
     "\n",
-    "# 4) Build & compile the LSTM\n",
+    "#  Build & compile the LSTM\n",
     "model = Sequential([\n",
     "    Embedding(input_dim=5000, output_dim=128),  # drop input_length\n",
     "    LSTM(64, dropout=0.2, recurrent_dropout=0.2),\n",
@@ -225,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b7550601-4e38-48fa-b859-4eb17e3dde88",
    "metadata": {},
    "outputs": [],
@@ -236,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "795f0df3-5424-45fe-8c43-4d6307093f03",
    "metadata": {},
    "outputs": [],
@@ -261,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "a612fa8a-47c1-432e-8a21-5cdf753ff783",
    "metadata": {},
    "outputs": [
@@ -301,7 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
+   "id": "e1fa12dc-9706-4510-b68d-629d469f1572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "topics = []\n",
+    "for idx, topic in lda.print_topics(num_topics=10, num_words=10):\n",
+    "    words = [w.split('*')[1].strip().strip('\"') for w in topic.split(' + ')]\n",
+    "    topics.append({\"Topic\": f\"{idx:02d}\", \"Top Words\": \", \".join(words)})\n",
+    "\n",
+    "df_topics = pd.DataFrame(topics).set_index(\"Topic\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d371551b-362e-4af9-b5ed-9edbdacee348",
    "metadata": {},
    "outputs": [
@@ -437,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "dd0b9714-93df-4bec-9711-40062c589e2e",
    "metadata": {},
    "outputs": [],
@@ -449,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "7bedcdd5-6ebd-423a-9c0f-e56aabc0dd40",
    "metadata": {},
    "outputs": [
@@ -470,7 +512,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +526,7 @@
    "id": "4431584f-3209-485a-9b14-28ce46ece944",
    "metadata": {},
    "source": [
-    "## Key Insights\n",
+    "## Key Insights (Without Deduplicating)\n",
     "### Most common themes\n",
     "\n",
     " - Topic 08 (Wait Times & Process Frustrations): ~13.1% of reviews\n",
@@ -499,6 +541,115 @@
     "\n",
     " - Topic 02 (Customer Service Quality): ~6.9%"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "68743632-1386-498b-a3f6-73df0f0f03bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deduplicated dataset: 300 samples, 115 features\n",
+      "\n",
+      "5-Fold CV F1-macro scores:\n",
+      "  Logistic Regression: [1. 1. 1. 1. 1.] (mean=1.000)\n",
+      "  Naïve Bayes:         [1. 1. 1. 1. 1.] (mean=1.000)\n",
+      "\n",
+      "Train/Test split: 240 train, 60 test\n",
+      "\n",
+      "=== Logistic Regression on Test Set ===\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       1.00      1.00      1.00        20\n",
+      "     neutral       1.00      1.00      1.00        20\n",
+      "    positive       1.00      1.00      1.00        20\n",
+      "\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[20  0  0]\n",
+      " [ 0 20  0]\n",
+      " [ 0  0 20]] \n",
+      "\n",
+      "=== Naïve Bayes on Test Set ===\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       1.00      1.00      1.00        20\n",
+      "     neutral       1.00      1.00      1.00        20\n",
+      "    positive       1.00      1.00      1.00        20\n",
+      "\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[20  0  0]\n",
+      " [ 0 20  0]\n",
+      " [ 0  0 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %% Deduplicated Evaluation: CV & Train/Test\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split\n",
+    "from sklearn.linear_model    import LogisticRegression\n",
+    "from sklearn.naive_bayes     import MultinomialNB\n",
+    "from sklearn.metrics         import classification_report, confusion_matrix\n",
+    "\n",
+    "# 1) Load deduplicated features & labels\n",
+    "with open('../data/X_unique.pkl', 'rb') as f:\n",
+    "    X = pickle.load(f)\n",
+    "with open('../data/y_unique.pkl', 'rb') as f:\n",
+    "    y = pickle.load(f)\n",
+    "\n",
+    "print(f\"Deduplicated dataset: {X.shape[0]} samples, {X.shape[1]} features\\n\")\n",
+    "\n",
+    "# 2) 5-fold CV for F1-macro\n",
+    "lr = LogisticRegression(max_iter=1000)\n",
+    "nb = MultinomialNB()\n",
+    "\n",
+    "lr_cv = cross_val_score(lr, X, y, cv=5, scoring='f1_macro')\n",
+    "nb_cv = cross_val_score(nb, X, y, cv=5, scoring='f1_macro')\n",
+    "\n",
+    "print(\"5-Fold CV F1-macro scores:\")\n",
+    "print(f\"  Logistic Regression: {lr_cv.round(3)} (mean={lr_cv.mean():.3f})\")\n",
+    "print(f\"  Naïve Bayes:         {nb_cv.round(3)} (mean={nb_cv.mean():.3f})\\n\")\n",
+    "\n",
+    "# 3) Single train/test split evaluation\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, stratify=y, random_state=42\n",
+    ")\n",
+    "print(f\"Train/Test split: {X_train.shape[0]} train, {X_test.shape[0]} test\\n\")\n",
+    "\n",
+    "# 4) Logistic Regression on test\n",
+    "lr.fit(X_train, y_train)\n",
+    "preds_lr = lr.predict(X_test)\n",
+    "print(\"=== Logistic Regression on Test Set ===\")\n",
+    "print(classification_report(y_test, preds_lr))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, preds_lr), \"\\n\")\n",
+    "\n",
+    "# 5) Naïve Bayes on test\n",
+    "nb.fit(X_train, y_train)\n",
+    "preds_nb = nb.predict(X_test)\n",
+    "print(\"=== Naïve Bayes on Test Set ===\")\n",
+    "print(classification_report(y_test, preds_nb))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, preds_nb))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c73e4a-4d66-4d0d-bd62-3b8088587558",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
